--- a/assets/js/fullcalendar-3.5.1/fullcalendar.css
+++ b/assets/js/fullcalendar-3.5.1/fullcalendar.css
@@ -1276,11 +1276,11 @@ be a descendant of the grid when it is being dragged.
 
 .fc-time-grid-event .fc-time,
 .fc-time-grid-event .fc-title {
-	padding: 0 1px;
+	padding: 0 1px;font-size: 1.2em;
 }
 
 .fc-time-grid-event .fc-time {
-	font-size: .85em;
+	font-size: 1.2em;
 	white-space: nowrap;
 }
 
@@ -1311,7 +1311,7 @@ be a descendant of the grid when it is being dragged.
 }
 
 .fc-time-grid-event.fc-short .fc-title {
-	font-size: .85em; /* make the title text the same size as the time */
+	font-size: 1.2em; /* make the title text the same size as the time */
 	padding: 0; /* undo padding from above */
 }
 
