--- a/assets/js/alertifyjs/css/themes/bootstrap.css
+++ b/assets/js/alertifyjs/css/themes/bootstrap.css
@@ -1,5 +1,5 @@
 /**
- * alertifyjs 1.10.0 http://alertifyjs.com
+ * alertifyjs 1.11.0 http://alertifyjs.com
  * AlertifyJS is a javascript framework for developing pretty browser dialogs and notifications.
  * Copyright 2017 Mohammad Younes <Mohammad@alertifyjs.com> (http://alertifyjs.com) 
  * Licensed under GPL 3 <https://opensource.org/licenses/gpl-3.0>*/
@@ -12,7 +12,8 @@
   min-height: 122px;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   border-radius: 6px;
 }
 .alertify .ajs-header {
