--- a/assets/js/alertifyjs/css/themes/default.css
+++ b/assets/js/alertifyjs/css/themes/default.css
@@ -1,11 +1,12 @@
 /**
- * alertifyjs 1.10.0 http://alertifyjs.com
+ * alertifyjs 1.11.0 http://alertifyjs.com
  * AlertifyJS is a javascript framework for developing pretty browser dialogs and notifications.
  * Copyright 2017 Mohammad Younes <Mohammad@alertifyjs.com> (http://alertifyjs.com) 
  * Licensed under GPL 3 <https://opensource.org/licenses/gpl-3.0>*/
 .alertify .ajs-dialog {
   background-color: white;
-  box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
 }
 .alertify .ajs-header {
