--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -5393,8 +5393,7 @@ td.visible-print {
   margin: 0px;
   padding: 0px;
   text-decoration: none;
-  outline: none;
-  text-align: center;}
+  outline: none;}
 
 /* line 11, /home/andrei/core-admin-release/core-admin/source/stylesheets/base.scss */
 html {
