--- a/assets/unify/plugins/sky-forms/version-2.0.1/css/sky-forms.css
+++ b/assets/unify/plugins/sky-forms/version-2.0.1/css/sky-forms.css
@@ -1022,7 +1022,11 @@
 }
 .sky-form .radio,
 .sky-form .checkbox {
-	font-weight: 400;
+	font-weight: normal;
+}
+
+.sky-form .checkbox_bold {
+	font-weight: bold;
 }
 .sky-form .radio + .radio,
 .sky-form .checkbox + .checkbox {
