--- a/assets/unify/plugins/sky-forms/version-2.0.1/css/sky-forms.css
+++ b/assets/unify/plugins/sky-forms/version-2.0.1/css/sky-forms.css
@@ -26,7 +26,7 @@
 .sky-form fieldset {
 	display: block;	
 	padding: 25px 30px 5px;
-	
+
 	background: rgba(255,255,255,.9);
 }
 .sky-form fieldset + fieldset {
@@ -321,7 +321,7 @@
 	line-height: 13px;
 	font-weight: 700;
 	text-align: left;
-	color: #5f5f5f;
+	color: #d93912;
 }
 .sky-form .toggle i:before {
 	content: '';
@@ -341,7 +341,12 @@
 .sky-form .toggle input:checked + i:after {
 	content: 'ON';
 	text-align: right;
+	color: #5cbd49;
 }
+.sky-form .toggle input:checked + i:before {
+	background-color: #5cbd49;
+}
+
 .sky-form .toggle input:checked + i:before {
 	right: 36px;
 }
@@ -1022,11 +1027,7 @@
 }
 .sky-form .radio,
 .sky-form .checkbox {
-	font-weight: normal;
-}
-
-.sky-form .checkbox_bold {
-	font-weight: bold;
+	font-weight: 400;
 }
 .sky-form .radio + .radio,
 .sky-form .checkbox + .checkbox {
